# boilerplate/swagger.json
@@ -54,9 +54,7 @@
             }
           }
         }
-      }
-    },
-    "/employees/": {
+      },
       "get": {
         "tags": [
           "Employees"
@@ -90,6 +88,20 @@
         "responses": {
           "200": {
             "description": "Employee is deleted",
+            "schema": {
+              "$ref": "#/definitions/Employee"
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Get employee with given ID",
+        "tags": [
+          "Employees"
+        ],
+        "responses": {
+          "200": {
+            "description": "Employee is retrieved by ID",
             "schema": {
               "$ref": "#/definitions/Employee"
             }
@@ -155,47 +167,34 @@
       }
     },
     "updateEmployee": {
-      "required": [
-        "name",
-        "companies"
-      ],
       "properties": {
-        "isPublic": {
-          "type": "boolean"
+        "id": {
+          "type": "integer",
+          "uniqueItems": true,
+          "example": "1"
         },
-        "name": {
-          "type": "string"
+        "firstName": {
+          "type": "string",
+          "example": "Bob"
         },
-        "books": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "name": {
-                "type": "string"
-              },
-              "amount": {
-                "type": "number"
-              }
-            }
-          }
-
+        "lastName": {
+          "type": "string",
+          "example": "Burgers"
         },
-        "companies": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-
+        "hireDate": {
+          "type": "string",
+          "example": "01/01/2020"
+        },
+        "role": {
+          "type": "string",
+          "example": "CEO"
         }
-
       }
     },
     "Employees": {
       "type": "array",
       "$ref": "#/definitions/Employee"
     }
-
   }
 }
 
